--- a/style/style.css
+++ b/style/style.css
@@ -5,34 +5,6 @@ body {
     margin: 0 auto;
     display: flex;
     justify-content: center;
-}
-
-nav {
-    width: 100vw;
-    height: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: reverse;
-    background-color: #485b6e;
-    justify-content: space-around;
-    font-size: 125%;
-}
-
-nav span {
-    letter-spacing: 2px;
-}
-nav ul {
-    display: flex;
-    flex-direction: reverse;
-    list-style-type: none;
-}
-
-nav ul li {
-    display: flex;
-    justify-content: space-around;
-    margin: 0 10px;
-    text-decoration: none;
-    letter-spacing: 1px;
-    text-transform: uppercase;
+    flex-direction: column;
+    scroll-behavior: smooth;
 }
