--- a/style/nav.css
+++ b/style/nav.css
@@ -5,18 +5,19 @@ nav {
     justify-content: center;
     align-items: center;
     flex-direction: reverse;
-    background-color: transparent;
     justify-content: space-around;
     font-size: 125%;
     top: 0;
     left: 0;
     position: fixed;
+    background-color: transparent;
     padding: 20px 0;
     transition: .7s;
 }
 
 nav span {
     letter-spacing: 2px;
+    font-size: 150%;
 }
 nav ul {
     display: flex;
@@ -43,40 +44,3 @@ nav.sticky {
     padding: 0;
     position: sticky;
 }
-
-/* nav.sticky span {
-    letter-spacing: 2px;
-} */
-/* nav.sticky ul {
-    display: flex;
-    flex-direction: reverse;
-    list-style-type: none;
-} */
-/* nav.sticky ul li {
-    display: flex;
-    justify-content: space-around;
-    margin: 0 10px;
-    text-decoration: none;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-} */
-/* 
-#homeNav:hover, #aboutNav:hover, #skillsNav:hover, #workNav:hover, #contactNav:hover {
-    cursor: pointer;
-} 
-
-nav ul li::after {
-    content: '';
-    display: block;
-
-    width: 0%;
-    height: 3px;
-    
-    margin-top: 3px;
-    border-radius: 3px;
-    background-color: coral;
-
-    transition: width .2s ease-in-out;
-} 
-
-nav ul li.current::after */
