--- a/style/style.css
+++ b/style/style.css
@@ -7,4 +7,6 @@ body {
     justify-content: center;
     flex-direction: column;
     scroll-behavior: smooth;
+    margin: 0 auto;
+    padding: 0;
 }
