--- a/style/home.css
+++ b/style/home.css
@@ -8,11 +8,11 @@
     align-items: center;
     justify-content: center;
     background-size: cover;
-    /* transition: height 100ms ease-in-out; */
+    transition: height 200ms ease-in-out;
 }
 
 #home h1 {
-    width: 30vw;
+    width: 40vw;
     height: 10vh;
     display: flex;
     align-items: center;
@@ -22,7 +22,7 @@
     /* color: #10bf9d; */
     color: #2cc2e6;
     /* writing-mode: vertical-lr; */
-    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    /* transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); */
 }
 /* @media screen and (max-aspect-ratio: 1/1) {
     #home {
