--- a/style/home.css
+++ b/style/home.css
@@ -9,20 +9,37 @@
     justify-content: center;
     background-size: cover;
     transition: height 200ms ease-in-out;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 #home h1 {
     width: 40vw;
     height: 10vh;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
-    /* transition: height 300ms ease-in; */
-    font-size: 3em;
-    /* color: #10bf9d; */
-    color: #2cc2e6;
-    /* writing-mode: vertical-lr; */
-    /* transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); */
+    font-size: 2.5em;
+    color: black;
+    font-family: sans-serif;
+}
+
+#firstName, #lastName {
+    width: 30vw;
+}
+#homeName span {
+    opacity: 0;
+    transition: all .5s ease;
+    transform: translateY(-150px);
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+
+#homeName span.fade {
+    opacity: 1;
+    transform: translateY(0px);
 }
 /* @media screen and (max-aspect-ratio: 1/1) {
     #home {
