--- a/style/home.css
+++ b/style/home.css
@@ -20,9 +20,10 @@
     display: none;
     align-items: center;
     justify-content: center;
-    font-size: 2.5em;
-    color: black;
+    font-size: 2.7em;
+    color: #0f76bb;
     font-family: sans-serif;
+    z-index: 1;
 }
 
 #firstName, #lastName {
