--- a/style/about.css
+++ b/style/about.css
@@ -1,5 +1,54 @@
 #about {
     height: 90vh;
     width: 100vw;
-    background-color: green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#aboutMe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 80%;
+    flex-direction: column;
+}
+
+#partOfAbout {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 80%;
+    flex-direction: row;
+}
+
+#partAboutMePicture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 60%;
+    flex-direction: row;
+}
+
+#partAboutMetext {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 80%;
+    flex-direction: column;
+    font-size: 1.1em;
+}
+
+#partPboutMeText p {
+    
+}
+
+#aboutMePicture {
+    height: 100%;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px 1px #485b6e; 
 }
