--- a/style/home.css
+++ b/style/home.css
@@ -22,7 +22,7 @@
     justify-content: center;
     font-size: 2.7em;
     color: #0f76bb;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     z-index: 1;
 }
 
