--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
 } */
 
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     width: 100vw;
     overflow-x: hidden;
     margin: 0 auto;
