--- a/style/about.css
+++ b/style/about.css
@@ -5,14 +5,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#aboutMe {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70%;
-    height: 80%;
     flex-direction: column;
 }
 
@@ -24,32 +16,23 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
-    height: 80%;
+    width: 70%;
+    height: 70%;
     flex-direction: row;
 }
 
-#partAboutMePicture {
+.partAbout {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 50%;
     height: 70%;
-    flex-direction: row;
-}
-
-#partAboutMetext {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 80%;
     flex-direction: column;
     font-size: 1.1em;
 }
 
 #aboutMePicture {
-    height: 100%;
+    height: 90%;
     border-radius: 5px;
     box-shadow: 2px 2px 10px 1px #485b6e; 
 }
