--- a/style/home.css
+++ b/style/home.css
@@ -15,7 +15,7 @@
 }
 
 #home h1 {
-    width: 40vw;
+    width: 70vw;
     height: 10vh;
     display: none;
     align-items: center;
@@ -26,16 +26,16 @@
     z-index: 1;
 }
 
-#firstName, #lastName {
-    width: 30vw;
-}
 #homeName span {
     opacity: 0;
     transition: all .5s ease;
     transform: translateY(-150px);
     display: inline-block;
     text-transform: uppercase;
-    letter-spacing: 5px;
+    /* letter-spacing: 5px; */
+    width: 35px;
+    display: flex;
+    justify-content: center;
 }
 
 #homeName span.fade {
