--- a/style/about.css
+++ b/style/about.css
@@ -1,5 +1,5 @@
 #about {
-    height: 90vh;
+    min-height: 90vh;
     width: 100vw;
     background-color: white;
     display: flex;
@@ -26,13 +26,13 @@
     justify-content: center;
     align-items: center;
     width: 50%;
-    height: 100%;
+    height: 90%;
     flex-direction: column;
     font-size: 1.1em;
 }
 
 #aboutMePicture {
-    height: 60%;
+    height: 45vh;
     border-radius: 5px;
     box-shadow: 2px 2px 10px 1px #485b6e; 
 }
